<resources>
    <string name="app_name">Account Wallet</string>
    <string name="str_start_wallet">Account Wallet</string>
    <string name="str_start_description">Easy way to managing your account!</string>
    <string name="btn_start_app">Start Managing Account</string>
    <string name="hint_enter_nick_name">Please Enter Your Nickname.</string>
    <string name="str_card_description1">In this App,</string>
    <string name="str_card_description2">You manage</string>
    <string name="str_card_description3">accounts!</string>
    <string name="str_card_tail">stored by your device</string>
    <string name="btn_add_account">Add Your Account (New)</string>
    <string name="btn_see_account">See Your Accounts</string>
    <string name="str_info_type">Information Type</string>
    <string name="str_form_input">Input Your Information</string>
    <string name="btn_save_account">Save Your Account</string>
    <string name="hint_search_account">Search Account…</string>
    <string name="cb_account_only">Only account</string>
    <string name="h_site_name">Site Name</string>
    <string name="hint_site_name">Enter Site Name</string>
    <string name="hint_personal_account">Enter Your Account ID ( or Email )</string>
    <string name="h_personal_account">Account</string>
    <string name="hint_password">Enter Your Password…</string>
    <string name="h_password">Password</string>
    <string name="h_create_date">Create Date</string>
    <string name="hint_create_date">Select Date</string>
    <string name="h_site_url">Web URL</string>
    <string name="hint_site_url">Enter Official Site URL</string>
    <string name="h_memo">Memo</string>
    <string name="hint_memo">Enter Memo…</string>
    <string name="suffix_registered">&#160;registered</string>
    <string name="h_provider_name">Provider</string>
    <string name="hint_provider_name">Enter Provider…(eg. Microsoft)</string>
    <string name="h_product_key">Product Key</string>
    <string name="hint_product_key">Enter Your Product Key…</string>
    <string name="btn_edit_account">Edit Your Account</string>
    <string name="btn_download_data">Download Your Account</string>
    <string name="str_form_view">Account Information</string>
    <string name="permission_guide">Allow the necessary permissions to use the app.</string>


    <!-- 사용자 권한 -->
    <array name="arr_user_permission">
        <item>Storage</item>
    </array>

    <array name="arr_user_permission_desc">
        <item>Allow the app to access external storage.</item>
    </array>

    <array name="icon_user_permissions">
        <item>@drawable/ic_folder</item>
    </array>

    <string-array name="arr_setting_option">
        <item>Language</item>
        <item>App Version</item>
        <item>Open Source License</item>
        <item>Export data</item>
        <item>Import data</item>
        <item>Reset data</item>
    </string-array>

    <!-- 정렬 옵션 -->
    <string-array name="arr_sort_option">
        <item>Desc</item>
        <item>Asc</item>
        <item>name</item>
        <item>Past</item>
        <item>Newest</item>
        <item>Tag</item>
        <item>Type</item>
    </string-array>

    <string-array name="key_sort_option">
        <item>IDDESC</item>
        <item>IDASC</item>
        <item>PROVNAME</item>
        <item>DATEASC</item>
        <item>DATEDESC</item>
        <item>TAGCOLOR</item>
        <item>INFTYPE</item>
    </string-array>

    <string-array name="spinner_info_type">
        <item>Personal Account</item>
        <item>Product Key</item>
    </string-array>

    <array name="icons_download_type">
        <item>@drawable/ic_text_black</item>
        <item>@drawable/ic_html_black</item>
        <item>@drawable/ic_json_black</item>
    </array>

    <string-array name="items_download_type">
        <item>Save as Plain Text</item>
        <item>Save as HTML</item>
        <item>Save as JSON</item>
    </string-array>


    <!-- string 저장을 위한 프리셋 리스트 -->
    <string-array name="items_identity_header">
        <item>Information Type</item>
        <item>Provider Name</item>
        <item>Create At</item>
        <item>Latest Update</item>
        <item>User Memo</item>
        <item>Tag Color</item>
    </string-array>

    <string-array name="items_account_header">
        <item>User Account</item>
        <item>User Password</item>
        <item>Account Create At</item>
        <item>Official URL</item>
    </string-array>

    <string-array name="items_product_header">
        <item>Product Key</item>
        <item>Official URL</item>
    </string-array>

    <string name="txt_h_save_file">File saved:</string>
    <string name="txt_h_save_backup_file">Save file : /Download/</string>
    <string name="txt_h_fail_save">An error occurred while creating the file.</string>
    <string name="txt_error_log_result">%1$s\nError details saved in %2$s</string>
    <string name="txt_error_log_create">%1$s\nFailed to save error details</string>

    <string name="txt_guide_modify_permission"><![CDATA[Please change the settings in Application Information > Permissions.]]></string>
    <string name="app_play_store_url">https://play.google.com/store/apps/details?id=kr.co.devicechecker</string>
    <string name="msg_invalid_vending">fail to move google play store</string>
    <string name="h_item_tag">Tag Color</string>
    <string name="btn_select">Select</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_select_tag">Select Tag Color</string>
    <string name="msg_success_nickname">Your nickname has been successfully registered.</string>
    <string name="str_empty">None</string>
    <string name="def_tag_color">#93534C</string>
    <string name="tag_str_account">Account</string>
    <string name="tag_str_product_key">Product</string>
    <string name="title_warning">Warning</string>
    <string name="content_delete_info">Do you really want to delete the currently registered information?\nDeleted data cannot be restored.</string>
    <string name="msg_delete_complete">The information you selected has been deleted.</string>
    <string name="msg_add_fail">Failed to register the information you entered…</string>
    <string name="msg_add_success">The information you entered has been successfully registered.</string>
    <string name="msg_edit_success">The information you entered has been edited.</string>
    <string name="msg_edit_fail">Failed to edit the information you entered…</string>
    <string name="content_delete_database">Do you really want to delete all saved data?\nDeleted data cannot be recovered.</string>
    <string name="msg_database_delete_all">All information has been reset.</string>
    <string name="msg_input_nickname">Please enter your nickname.</string>
    <string name="msg_refresh_tag_color">Tag colors have been reset.</string>
    <string name="msg_invalid_color_value">Invalid color. Please enter again.</string>
    <string name="title_dialog_user_profile">Edit user information</string>
    <string name="tv_profile_guide">Edit the information below:</string>
    <string name="tv_label_nickname">Nickname :</string>
    <string name="btn_dialog_edit">Edit</string>
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="msg_change_nickname">Nickname has been modified: : %s</string>
    <string name="msg_notify_edit_user_info">Edit your user information…</string>
    <string name="title_download_type">Download file format</string>
    <string name="title_data_export">Data Export</string>
    <string name="title_data_import">Data Import</string>
    <string name="btn_delete_database">Delete</string>
    <string name="content_export_database">Do you really want to export the saved data?\nClick [Start] to start the export process.</string>
    <string name="btn_start">Start</string>
    <string name="txt_init_progress">init progress…</string>
    <string name="load_user_account">Loading user account information…</string>
    <string name="load_product_key">Loading product key information…</string>
    <string name="msg_fin_export_path">File export complete\npath : %1$s</string>
    <string name="btn_data_import">Import</string>
    <string name="status_detect_backup">Backup File Detected.</string>
    <string name="btn_stop">Stop</string>
    <string name="msg_export_file_progress">Exporting file…</string>
    <string name="load_backup_data">Preparing to read data for backup…</string>
    <string name="key_user_account">UserAccount</string>
    <string name="key_product">ProductKey</string>
    <string name="hint_click_file">Click here!</string>
    <string name="hint_select_backup_file">Please choose a backup file (JSON format)</string>
    <string name="msg_occur_err_import_data">An error occurred during data import. Please try again.</string>
    <string name="status_ready_load_data">The backup data was successfully loaded.</string>
    <string name="status_load_user_account">Loading user account information…</string>
    <string name="status_load_product_key">Loading product key information…</string>
    <string name="status_import_user_account">Entering user account information…</string>
    <string name="status_import_product_key">Entering product key information…</string>
    <string name="status_fail_load_data">Canceled loading data…</string>
    <string name="status_success_load_data">Data loading completed</string>
    <string name="status_fail_export_data">Canceled export data…</string>
</resources>