<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ProductFormFragment"
    >

    <data>
        <variable
            name="click"
            type="com.aiden.accountwallet.base.listener.ViewClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_account_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintGuide_percent="0.3"
            />

        <!-- Provider Name -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/h_provider_name"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_provider_name"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/et_provider_name"
            app:layout_constraintBottom_toBottomOf="@id/et_provider_name"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_provider_name"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_provider_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            />

        <!-- ID -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/h_product_key"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_product_key"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/et_product_key"
            app:layout_constraintBottom_toBottomOf="@id/et_product_key"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_product_key"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_key"
            app:layout_constraintTop_toBottomOf="@id/et_provider_name"
            app:layout_constraintStart_toStartOf="@id/gl_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            />

        <!-- Official Site -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/h_site_url"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_site_url"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/et_site_url"
            app:layout_constraintBottom_toBottomOf="@id/et_site_url"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_site_url"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_site_url"
            app:layout_constraintTop_toBottomOf="@id/et_product_key"
            app:layout_constraintStart_toStartOf="@id/gl_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            />
        <!-- Memo -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/h_memo"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_memo"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/et_site_url"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="18dp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_memo"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_memo"
            app:layout_constraintTop_toBottomOf="@id/h_memo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>