<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AccountViewFragment"
    >

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.aiden.accountwallet.ui.viewmodel.InfoItemViewModel" />
        <variable
            name="click"
            type="com.aiden.accountwallet.base.listener.ViewClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_account_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintGuide_percent="0.3"
            />

        <!-- Site Name -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/v_site_name"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_site_name"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/tv_site_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_site_name"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_site_name"
            style="@style/baseTextStyle"
            android:text="@{vm.MIdAccountInfo.baseInfo.providerName}"
            android:textSize="16sp"
            android:textColor="@color/sky_blue600"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:text="@string/hint_site_name"
            />

        <!-- ID -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/v_personal_account"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_personal_account"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/tv_personal_account"
            app:layout_constraintBottom_toBottomOf="@id/tv_personal_account"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_personal_account"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{vm.MIdAccountInfo.accountInfo.userAccount}"
            android:textSize="16sp"
            android:textColor="@color/sky_blue600"
            app:layout_constraintTop_toBottomOf="@id/tv_site_name"
            app:layout_constraintStart_toStartOf="@id/gl_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:text="@string/hint_personal_account"
            />

        <!-- Password -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/v_password"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_password"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/tv_password"
            app:layout_constraintBottom_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_password"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{vm.MIdAccountInfo.accountInfo.userPassword}"
            android:textSize="16sp"
            android:textColor="@color/sky_blue600"
            app:layout_constraintTop_toBottomOf="@id/tv_personal_account"
            app:layout_constraintStart_toStartOf="@id/gl_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:text="@string/hint_password"
            />


        <!-- Create Date -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/v_create_date"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_create_date"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/tv_create_date"
            app:layout_constraintBottom_toBottomOf="@id/tv_create_date"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create_date"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/sky_blue600"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="@id/gl_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:text="@string/hint_create_date"
            />

        <!-- Official Site -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/v_site_url"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_site_url"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/tv_site_url"
            app:layout_constraintBottom_toBottomOf="@id/tv_site_url"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_site_url"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{vm.MIdAccountInfo.accountInfo.officialUrl}"
            android:textSize="16sp"
            android:textColor="@color/sky_blue600"
            app:layout_constraintTop_toBottomOf="@id/tv_create_date"
            app:layout_constraintStart_toStartOf="@id/gl_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:text="@string/hint_site_url"
            />

        <!-- Memo -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/v_memo"
            style="@style/boldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_memo"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_site_url"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="18dp"
            android:visibility="@{vm.MIdAccountInfo.baseInfo.memo.toString().length() > 0 ? View.VISIBLE : View.GONE}"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_memo"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{vm.MIdAccountInfo.baseInfo.memo}"
            android:textSize="16sp"
            android:textColor="@color/sky_blue600"
            app:layout_constraintTop_toBottomOf="@id/v_memo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            android:background="@drawable/bg_all_line"
            android:visibility="@{vm.MIdAccountInfo.baseInfo.memo.toString().length() > 0 ? View.VISIBLE : View.GONE}"
            tools:text="@string/hint_memo"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>