<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.StartFragment"
    >

    <data>
        <variable
            name="click"
            type="com.aiden.accountwallet.base.listener.ViewClickListener" />
    </data>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/fl_start_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flexDirection="column"
        app:alignItems="center"
        app:justifyContent="center"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fl_start_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:flexDirection="column"
                app:alignItems="center"
                app:justifyContent="center"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_start_wallet"
                    android:layout_width="70dp"
                    android:layout_height="73.5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_wallet"
                    android:layout_marginBottom="16dp"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/boldTextStyle"
                    android:id="@+id/tv_start_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_start_wallet"
                    android:textSize="32sp"
                    />
            </com.google.android.flexbox.FlexboxLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_start_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_start_description"
                app:layout_constraintTop_toBottomOf="@id/fl_start_wallet"
                app:layout_constraintStart_toStartOf="@id/fl_start_wallet"
                app:layout_constraintEnd_toEndOf="@id/fl_start_wallet"
                android:layout_marginTop="16dp"
                />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/lightTextStyle"
                android:id="@+id/et_enter_nick_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_nick_name"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tv_start_description"
                app:layout_constraintStart_toStartOf="@id/tv_start_description"
                app:layout_constraintEnd_toEndOf="@id/tv_start_description"
                android:layout_marginTop="16dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start_app"
                style="@style/boldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_base_button"
                android:text="@string/btn_start_app"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/et_enter_nick_name"
                app:layout_constraintTop_toBottomOf="@id/et_enter_nick_name"
                app:layout_constraintEnd_toEndOf="@id/et_enter_nick_name"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{(v)->click.onViewClick(v)}"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.flexbox.FlexboxLayout>
</layout>